--- a/hardco-porfolio/src/pages/home/home.scss
+++ b/hardco-porfolio/src/pages/home/home.scss
@@ -7,8 +7,8 @@
         background-color: lightsalmon;
         position: relative;
         top:70px;
-        scroll-behavior: smooth;
-        scroll-snap-type: y mandatory;
+        scroll-behavior: smooth !important;
+        scroll-snap-type: y mandatory !important; 
         scrollbar-width:none;//for firefox
         &::-webkit-scrollbar{
             display: none;
