--- a/hardco-porfolio/src/pages/home/home.scss
+++ b/hardco-porfolio/src/pages/home/home.scss
@@ -8,10 +8,11 @@
         position: relative;
         top:70px;
         scroll-behavior: smooth !important;
+        //transition: all 1 ease;
         scroll-snap-type: y mandatory !important; 
         scrollbar-width:none;//for firefox
         &::-webkit-scrollbar{
-            display: none;
+            display: none; 
         }
 
         > *{
