--- a/hardco-porfolio/src/components/menu/menu.scss
+++ b/hardco-porfolio/src/components/menu/menu.scss
@@ -11,7 +11,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    transition: all 1s ease;
+    transition: all 1s ease !important;
+    -webkit-transition: all 1s ease !important;
     &.active{
         right:0;
     }
