--- a/hardco-porfolio/src/pages/aboutme/aboutme.scss
+++ b/hardco-porfolio/src/pages/aboutme/aboutme.scss
@@ -7,9 +7,11 @@
         background-color: lightsalmon;
         position: relative;
         top:70px;
+        --scroll-behavior: smooth;
         scroll-behavior: smooth !important;
-        scroll-snap-type: y mandatory;
+        scroll-snap-type: y mandatory !important;
         scrollbar-width:none;//for firefox
+        -webkit-transition: 190ms width linear; 
         &::-webkit-scrollbar{
             display: none;
         }
