--- a/hardco-porfolio/src/components/porfolio/porfolio.scss
+++ b/hardco-porfolio/src/components/porfolio/porfolio.scss
@@ -66,6 +66,10 @@
                 position: absolute;
                 font-size: 20px;
                 cursor: pointer;
+
+                @include mobile{
+                    font-size:12px;
+                }
                 a{
                     color:inherit;
                     text-decoration: none;
